--- a/css/hammer.css
+++ b/css/hammer.css
@@ -149,7 +149,7 @@ section{
 }
 
 /* FIG IMGS  */
-#mvp-fig, #imp-fig, #research-fig, #persona-fig{
+#mvp-fig, #imp-fig, #research-fig, #persona-fig, #market-fig{
   width: 1000px;
   margin: 4.0em auto 0;
 }
