--- a/css/receipt.css
+++ b/css/receipt.css
@@ -433,6 +433,11 @@ figcaption{
   opacity: 75%;
 }
 
+#concept-vid{
+  margin-top: 1.0em;
+}
+
+
 
 /* MEDIA QUERIES - responsive web design for specific widths */
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
