--- a/css/index.css
+++ b/css/index.css
@@ -50,7 +50,7 @@ figcaption{
     margin: 4.0em auto;
     text-align: center;
     padding: 2.0em 5.0em;
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
   }
 
   body{
@@ -245,7 +245,7 @@ figcaption{
     margin: 4.0em auto;
     text-align: center;
     padding: 2.0em 5.0em;
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
 }
 
 .project{
@@ -918,7 +918,7 @@ so they don't overlap */
     }
 
     /* ABOUT  */
-    
+
     /* ETC  */
 
     /* CONTAINER  */
