--- a/css/hammer.css
+++ b/css/hammer.css
@@ -105,11 +105,10 @@ font-family: 'Poppins', sans-serif;
 /* footer  */
 .footer-container {
   display: block;
-  margin: 0 auto;
+  margin: 0 auto 1.0em;
   text-align: center;
   padding: 2.0em 5.0em;
   background-color: white;
-  font-size: 18px;
 }
 
 #footer-icon{
@@ -140,6 +139,7 @@ section{
 
 /* MORE PROJECTS  */
 #receiptx{
+  margin-top: 1.0em;
   width: 250px;
   border-radius: 10px;
 }
@@ -406,7 +406,7 @@ iframe{
 
 /* ETC  */
 figcaption{
-  text-align: left;
+  text-align: center;
 }
 
 #light-head{
@@ -416,6 +416,11 @@ figcaption{
 
 #concept-vid{
   margin-top: 1.0em;
+}
+
+#concept-vid:hover{
+  color: #283891;
+  cursor: pointer;
 }
 
 
@@ -499,6 +504,10 @@ figcaption{
   }
 
   /* NAVIGATION  */
+  /* nav bar links  */
+  .navbar a{
+    font-size: 14px;
+  }
 
   /* HEADER  */
   .logo{
@@ -506,6 +515,10 @@ figcaption{
     width: 100px;
   }
   /* OVERVIEW  */
+  .overview p{
+    font-size: 14px;
+  }
+
   .overview-row{
     display: block;
   }
@@ -525,29 +538,69 @@ figcaption{
   /* ROLE  */
 
   /* BACKGROUND */
+  .background P{
+    font-size: 14px;
+  }
 
-  /* ACHIEVEMENTS */
+/* ACHIEVEMENTS */
   .achievements ul{
+    font-size: 14px;
     width: 85%;
   }
 
   /* RESEARCH */
+  .research p{
+    font-size: 14px;
+  }
+
+  .res-imgs ul{
+    font-size: 14px;
+  }
 
   /* PERSONA */
+  .persona p{
+    font-size: 14px;
+  }
 
   /* STATEMENT */
+  .statement{
+    font-size: 14px;
+  }
 
   /* VISION */
+  .vision p{
+    font-size: 14px;
+  }
 
   /* MARKET  */
+  .market p{
+    font-size: 14px;
+  }
 
-  /* MVP */
+   /* MVP */
+   .mvp p{
+    font-size: 14px;
+  }
 
   /* DESIGN */
+  .design p{
+    font-size: 14px;
+  }
 
   /* IMPLEMENTATION */
+  .implementation p{
+    font-size: 14px;
+  }
 
   /* TAKEAWAY */
+  .takeaway p{
+    font-size: 14px;
+  }
+
+  /* MORE PROJ  */
+  .proj p{
+    font-size: 14px;
+  }
 
   /* FOOTER  */
   .footer-container{
@@ -555,6 +608,10 @@ figcaption{
   }
   
   /* ETC  */
+  figcaption{
+    font-size: 14px;
+  }
+
   iframe{
     width: 650px;
     height: 400px;
@@ -615,32 +672,85 @@ figcaption{
   /* HEADER  */
 
   /* OVERVIEW  */
+  .overview p{
+    font-size: 12px;
+  }
 
   /* ROLE  */
 
   /* BACKGROUND */
+  .background p{
+    font-size: 12px;
+  }
 
   /* ACHIEVEMENTS */
+  .achievements ul{
+    font-size: 12px;
+  }
 
   /* RESEARCH */
+  .research p{
+    font-size: 12px;
+  }
+
+  .res-imgs ul{
+    font-size: 12px;
+  }
 
   /* PERSONA */
+  .persona p{
+    font-size: 12px;
+  }
 
   /* STATEMENT */
+  .statement p{
+    font-size: 12px;
+  }
 
   /* MARKET  */
+  .market p{
+    font-size: 12px;
+  }
   
   /* VISION */
+  .vision p{
+    font-size: 12px;
+  }
 
   /* MVP */
+  .mvp p{
+    font-size: 12px;
+  }
 
   /* DESIGN */
+  .design p{
+    font-size: 12px;
+  }
 
   /* IMPLEMENTATION */
+  .implementation p{
+    font-size: 12px;
+  }
 
   /* TAKEAWAY */
+  .takeaway p{
+    font-size: 12px;
+  }
+
+  /* MORE PROJ  */
+  .proj p{
+    font-size: 12px;
+  }
 
   /* ETC  */ 
+  figcaption{
+    font-size: 12px;
+  }
+  
+  .footer-container{
+    font-size: 12px;
+  }
+
   iframe{
     width: 550px;
     height: 400px;
@@ -777,6 +887,11 @@ so they don't overlap */
   /* TAKEAWAY */
 
   /* ETC  */
+  .footer-container{
+    padding: 2.0em 0;
+    font-size: 12px;
+}
+
   iframe{
     width: 325px;
     height: 300px;
