--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ html {
 /* ETC  */
 /* IMAGE CAPTION  */
 figcaption{
-    font-size: 10px;
+    font-size: 12px;
 }
 
   /* general  */
@@ -489,7 +489,7 @@ figcaption{
 /* footer */
 .footer-container {
     display: block;
-    margin: 0 auto;
+    margin: 4.0em auto 1.0em;
     text-align: center;
     padding: 2.0em 5.0em;
     background-color: white;
@@ -583,6 +583,11 @@ figcaption{
 
     .process-desc, .about-info{
         flex-flow: column nowrap;
+    }
+
+    /* ETC */
+    .footer-container{
+        font-size: 14px;
     }
 }
 
@@ -817,10 +822,6 @@ figcaption{
         padding: 2.0em 0.5em;
     }
 
-    .footer-container {
-        padding: 2.0em 0.5em;
-    }
-
     /* IMAGES */
     .uxImg{
         height: 200px;
@@ -844,7 +845,7 @@ so they don't overlap */
   }
 
 /* MOBILE IPHONE 6/7/8  */
-@media  screen and (max-width: 375px){
+@media  screen and (max-width: 400px){
     /* HEADER  */
     /* the header on top of page  */
     #header h1{
@@ -915,8 +916,9 @@ so they don't overlap */
         padding: 2.0em 0;
     }
 
-    .footer-container {
+    .footer-container{
         padding: 2.0em 0;
+        font-size: 12px;
     }
     
     /* DIVIDING SECTIONS  */
