--- a/css/receipt.css
+++ b/css/receipt.css
@@ -254,6 +254,15 @@ section{
   justify-content: center;
   flex-flow: column nowrap;
   text-align: center;
+  margin-bottom: 2.0em;
+}
+
+#header h1{
+  font-family: 'Merriweather', serif;
+  font-weight: bold;
+  letter-spacing: 4px;
+  font-size: 96px;
+  margin: 20px 0;
 }
 
 /* banner  */
@@ -466,6 +475,9 @@ figcaption{
   }
 
   /* NAVIGATION  */
+  .navbar a{
+    font-size: 16px;
+  }
 
   /* HEADER  */
 
@@ -515,6 +527,10 @@ figcaption{
 /* ADJUSTED SCREEN - MEDIUM*/
 @media  screen and (max-width: 800px){
   /* DEFAULT STUFF  */
+/* the header on top of page  */
+  #header h1{
+    font-size: 72px;
+  }
 
   /* IMAGES */
   /* figures  */
@@ -801,6 +817,9 @@ figcaption{
 /* WIDTH SIZE SMALLEST  */
 @media screen and (max-width: 500px){
   /* DEFAULT STUFF  */
+  #header h1{
+    font-size: 48px;
+  }
   
   /* IMAGES */
   #mvp-fig, #imp-fig, #research-fig, #persona-fig{
@@ -864,6 +883,11 @@ so they don't overlap */
 /* MOBILE IPHONE 6/7/8  */
 @media screen and (max-width: 400px){
   /* DEFAULT STUFF  */
+  #header h1{
+    margin-top: 0;
+    font-size: 36px;
+  }
+
   .container{
     max-width: 375px;
     /* padding: 0; */
