--- a/css/index.css
+++ b/css/index.css
@@ -460,15 +460,20 @@ figcaption{
     padding: 5px;
 }
 
-.about-info{
+.values{
+    margin: 4.0em 0 2.0em;
+}
+
+.value{
     text-align: left;
+    margin-top: 2.0em;
 }
 
 #about img{
     height: 300px;
     width: 300px;
     border-radius: 50%;
-    margin: 1.0em auto;
+    margin: 1.0em auto 2.0em;
 }
 
 /* quote */
