--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,7 @@ figcaption{
 .navbar{
     display: flex;
     justify-content: center;
+    flex-flow: row nowrap;
     margin: 3.0em 0;
     background-color: white;
 }
@@ -101,11 +102,12 @@ figcaption{
 }
 
 /* links in navigation */
-.navbar a{
-    padding: 12px;
+.navbar a, .navbar .dropdown{
+    padding: 12px 16px;
     font-size: 18px;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
+    text-align: center;
     color: blue;
 }
 
@@ -165,6 +167,40 @@ figcaption{
     top: 20px;
     right: 45px;
     font-size: 60px;
+  }
+
+  /* The dropdown container */
+.dropdown {
+    /* float: left; */
+    overflow: hidden;
+  }
+
+  /* Dropdown content (hidden by default) */
+.dropdown-content {
+    margin-top: 5px;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  /* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
   }
 
   /* back to top button */
@@ -532,7 +568,7 @@ figcaption{
 
 /* THE NORMAL  */
 @media  screen and (max-width: 1000px){
-    .navbar a{
+    .navbar a, .navbar .dropdown{
         font-size: 16px;
     }
 
@@ -601,7 +637,7 @@ figcaption{
 
     /* NAVIGATION  */
     /* nav bar links  */
-    .navbar a{
+    .navbar a, .navbar .dropdown{
         font-size: 14px;
     }
 
@@ -697,7 +733,7 @@ figcaption{
     }
 
     /* the nav bar links  */
-    .navbar a {
+    .navbar a, .navbar .dropdown{
         display: none;
     }
 
