--- a/css/receipt.css
+++ b/css/receipt.css
@@ -181,7 +181,7 @@ section{
 }
 
 /* links in navigation */
-.navbar a{
+.navbar a, .navbar .dropdown{
   padding: 12px;
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
@@ -245,6 +245,40 @@ section{
   top: 20px;
   right: 45px;
   font-size: 60px;
+}
+
+ /* The dropdown container */
+ .dropdown {
+  /* float: left; */
+  overflow: hidden;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  margin-top: 5px;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 /* SECTIONS ON PAGE  */
@@ -478,7 +512,7 @@ figcaption{
   }
 
   /* NAVIGATION  */
-  .navbar a{
+  .navbar a, .navbar .dropdown{
     font-size: 16px;
   }
 
@@ -546,7 +580,7 @@ figcaption{
 
   /* NAVIGATION  */
   /* nav bar links  */
-  .navbar a{
+  .navbar a, .navbar .dropdown{
     font-size: 14px;
   }
 
@@ -701,7 +735,7 @@ figcaption{
   }
 
   /* the nav bar links  */
-  .navbar a {
+  .navbar a, .navbar .dropdown{
     display: none;
   }
 
