--- a/css/hammer.css
+++ b/css/hammer.css
@@ -211,7 +211,7 @@ section{
 }
 
 /* The navigation links inside the overlay */
-.overlay a {
+.overlay a, .overlay-dropdown{
   padding: 8px;
   text-decoration: none;
   font-size: 36px;
@@ -221,7 +221,7 @@ section{
 }
 
 /* When you mouse over the navigation links, change their color */
-.overlay a:hover, .overlay a:focus {
+.overlay a:hover, .overlay a:focus{
   color: #f1f1f1;
   cursor: pointer;
 }
@@ -232,6 +232,21 @@ section{
   top: 20px;
   right: 45px;
   font-size: 60px;
+}
+
+/* OVER LAY DROP DOWN  */
+.overlay-dropdown {
+  overflow: hidden;
+}
+
+.overlay-dropdown-content {
+  display: none;
+  margin: 5px auto 0;
+}
+
+.over-lay-dropdown-content a {
+  float: none;
+  display: block;
 }
 
  /* The dropdown container */
@@ -864,7 +879,7 @@ figcaption{
 so they don't overlap */
 @media screen and (max-height: 450px) {
   /* HAMBURGER CLOSE  */
-  .overlay a {font-size: 20px}
+  .overlay a, .overlay-dropdown {font-size: 20px}
   .overlay .closebtn {
     font-size: 40px;
     top: 15px;
